ajout des autres restaurants

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -1,1 +1,121 @@
-<
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="sass/style-menu.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        <title>La palette du goût</title>
+    </head>
+    <body>
+        <!--................HEADER...............-->
+        <header class="header"> 
+            <a href="index.html"><i class="fas fleche fa-arrow-left"></i></a>
+            <div class="logo">
+            <img src="images/logo/ohmyfood.png" alt="logo ohmyfood">
+            </div>
+        </header>
+        <!--...............MAIN................-->
+            <div class="photo_menu">
+                <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+            </div>
+        <main class="main">
+            <div class="titre">
+                <h1>A la française</h1>
+                <div class="coeur">
+                    <i class="far coeurvide fa-heart"></i>
+                    <i class="fas coeurrempli fa-heart"></i></div>
+            </div>
+            <section class="detailmenu">
+                <h2>ENTREES</h2>
+                <div class="blocmenu blocmenu--entree">
+                <article class="menu">
+                    <h4>Tartare de poulpe acidulé</h4>
+                    <div class="descriptiontarif">
+                        <p class="description_menu">Aux zests d'orange</p>
+                        <p class="tarif">25€</p>
+                        <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                <article class="menu">
+                    <h4>Velouté de légumes d'antan</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Carotte, panais, topinambour</p>
+                    <p class="tarif">35€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                <article class="menu">
+                    <h4>Soupe à l'oignon</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Revisitée</p>
+                    <p class="tarif">20€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                </div>
+                <h2>PLATS</h2>
+                <div class="blocmenu blocmenu--plat">
+                <article class="menu">
+                    <h4>Coquilles Saint-Jacques</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Accompagnées d'une purée de panais</p>
+                    <p class="tarif">40€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                <article class="menu">
+                    <h4>Magret de canard</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Et parmentier de pommes de terre</p>
+                    <p class="tarif">35€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                <article class="menu">
+                    <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Sur son lit de gnocchis aux légumes</p>
+                    <p class="tarif">44€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                </div>
+                <h2>DESSERTS</h2>
+                <div class="blocmenu blocmenu--dessert">
+                <article class="menu">
+                    <h4>Pétales de violettes glacés</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Et purée de noisettes</p>
+                    <p class="tarif">18€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                <article class="menu">
+                    <h4>Fondant au chocolat</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Revisité</p>
+                    <p class="tarif">22€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                <article class="menu">
+                    <h4>Millefeuille croustillant</h4>
+                    <div class="descriptiontarif">
+                    <p class="description_menu">Myrtilles et pâte d'amande</p>
+                    <p class="tarif">23€</p>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                </article>
+                </div>
+            </section>
+            <div class="bouton">
+            <a href="#"><button>Commander</button></a>
+            </div>
+            
+        </main>
+        <!--..................FOOTER.................-->
+        <footer>
+            <div class="logofooter">ohmyfood</div>
+            <div class="menu_footer">
+                <ul>
+                <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#email">Contact</a></li>
+            </div>
+        </footer>
+    </body>
+</html>
