encore essai check

--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -42,73 +42,82 @@
                         <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Caviar osciètre</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Sur blini à la farine de blé noir</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Caviar osciètre</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Sur blini à la farine de blé noir</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Homard et espuma de potiron</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Mariné aux zestes d'orange</p>
-                    <p class="tarif">20€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Homard et espuma de potiron</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Mariné aux zestes d'orange</p>
+                        <p class="tarif">20€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Foie gras de canard cuit entier</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Confiture de figue et pain toasté</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Foie gras de canard cuit entier</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Confiture de figue et pain toasté</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>PLATS</h2>
                 <div class="blocmenu blocmenu--plat">
                 <article class="menu">
-                    <h4>Noix de coquilles Saint-Jacques</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Sur lit de purée de céleri-rave</p>
-                    <p class="tarif">40€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Sur lit de purée de céleri-rave</p>
+                        <p class="tarif">40€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Langoustine poêlée</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Purée de patate douce</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Langoustine poêlée</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Purée de patate douce</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Mijoté de queue de boeuf</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et riz sauvage aux zestes de citron</p>
-                    <p class="tarif">44€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Mijoté de queue de boeuf</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et riz sauvage aux zestes de citron</p>
+                        <p class="tarif">44€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="blocmenu blocmenu--dessert">
                 <article class="menu">
-                    <h4>Macaron noisette et chocolat</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Glace au caramel brun et sel de Guérande</p>
-                    <p class="tarif">18€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Macaron noisette et chocolat</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Glace au caramel brun et sel de Guérande</p>
+                        <p class="tarif">18€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Baba au rhum revisité</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Avec son coulis de citron</p>
-                    <p class="tarif">22€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Baba au rhum revisité</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Avec son coulis de citron</p>
+                        <p class="tarif">22€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Tarte au citron meringuée</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Déstructurée</p>
-                    <p class="tarif">23€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Tarte au citron meringuée</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Déstructurée</p>
+                        <p class="tarif">23€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
             </section>
