Modif check terminées

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <title>La palette du goût</title>
+        <title>a la française</title>
     </head>
     <body>
         <!--................HEADER...............-->
@@ -34,73 +34,82 @@
                 <h2>ENTREES</h2>
                 <div class="blocmenu blocmenu--entree">
                 <article class="menu">
+                    <div class="totaldescription">
                     <h4>Tartare de poulpe acidulé</h4>
                     <div class="descriptiontarif">
                         <p class="description_menu">Aux zests d'orange</p>
-                        <p class="tarif">25€</p>
-                        <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                        <p class="tarif">25€</p></div></div>
+                        <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Velouté de légumes d'antan</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Carotte, panais, topinambour</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Velouté de légumes d'antan</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Carotte, panais, topinambour</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Soupe à l'oignon</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Revisitée</p>
-                    <p class="tarif">20€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Soupe à l'oignon</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Revisitée</p>
+                        <p class="tarif">20€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>PLATS</h2>
                 <div class="blocmenu blocmenu--plat">
                 <article class="menu">
-                    <h4>Coquilles Saint-Jacques</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Accompagnées d'une purée de panais</p>
-                    <p class="tarif">40€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Coquilles Saint-Jacques</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Accompagnées d'une purée de panais</p>
+                        <p class="tarif">40€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Magret de canard</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et parmentier de pommes de terre</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Magret de canard</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et parmentier de pommes de terres</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Sur son lit de gnocchis aux légumes</p>
-                    <p class="tarif">44€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Sur son lit de gnocchis aux légumes</p>
+                        <p class="tarif">44€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="blocmenu blocmenu--dessert">
                 <article class="menu">
-                    <h4>Pétales de violettes glacés</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et purée de noisettes</p>
-                    <p class="tarif">18€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Pétales de violettes glacés</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et purée de noisettes</p>
+                        <p class="tarif">18€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Fondant au chocolat</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Revisité</p>
-                    <p class="tarif">22€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Fondant au chocolat</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Revisité</p>
+                        <p class="tarif">22€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Millefeuille croustillant</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Myrtilles et pâte d'amande</p>
-                    <p class="tarif">23€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Millefeuille croustillant</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Myrtilles et pâte d'amande</p>
+                        <p class="tarif">23€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
             </section>
