--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <title>La palette du goût</title>
+        <title>Le délice des sens</title>
     </head>
     <body>
         <!--................HEADER...............-->
@@ -34,73 +34,82 @@
                 <h2>ENTREES</h2>
                 <div class="blocmenu blocmenu--entree">
                 <article class="menu">
+                    <div class="totaldescription">
                     <h4>Tartare de thon</h4>
                     <div class="descriptiontarif">
                         <p class="description_menu">Assaisonné au yuzu</p>
-                        <p class="tarif">25€</p>
-                        <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                        <p class="tarif">25€</p></div></div>
+                        <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Bouchée de homard croustillant</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et sa farandole de petits légumes</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Bouchée de homard croustillant</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et sa farandole de petits légumes</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Velouté de cèpes</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Aux truffes</p>
-                    <p class="tarif">20€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Velouté de cèpes</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Aux truffes</p>
+                        <p class="tarif">20€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>PLATS</h2>
                 <div class="blocmenu blocmenu--plat">
                 <article class="menu">
-                    <h4>Poulet rôti aux herbes de Provence</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et sa crème de truffe</p>
-                    <p class="tarif">40€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Poulet rôti aux herbes de Provence</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et sa crème de truffe</p>
+                        <p class="tarif">40€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Langouste rôtie</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et ses légumes de saison</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Langouste rôtie</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et ses légumes de saison</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Côte de boeuf Angus</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et sa purée de panais</p>
-                    <p class="tarif">44€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Côte de boeuf angus</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et sa purée de panais</p>
+                        <p class="tarif">44€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="blocmenu blocmenu--dessert">
                 <article class="menu">
-                    <h4>Farandole de dessert</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Du chef</p>
-                    <p class="tarif">18€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Farandole de desserts</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Du chef</p>
+                        <p class="tarif">18€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Crème brulée</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Revisitée</p>
-                    <p class="tarif">22€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Crème brulée</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Revisitée</p>
+                        <p class="tarif">22€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Tiramisu</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">A la noisette</p>
-                    <p class="tarif">23€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Tiramisu</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">A la noisette</p>
+                        <p class="tarif">23€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
             </section>
