--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -34,73 +34,82 @@
                 <h2>ENTREES</h2>
                 <div class="blocmenu blocmenu--entree">
                 <article class="menu">
+                    <div class="totaldescription">
                     <h4>Fricassée d'escargot</h4>
                     <div class="descriptiontarif">
                         <p class="description_menu">Au piment d'espelette</p>
-                        <p class="tarif">25€</p>
-                        <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                        <p class="tarif">25€</p></div></div>
+                        <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Foie gras de canard mi-cuit</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et ses copeaux de truffe noire</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et ses copeaux de truffe noire</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Oeuf au plat</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Assaisonné à la truffe sur lit de caviar</p>
-                    <p class="tarif">20€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Oeuf au plat</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Assaisonné à la truffe sur lit de caviar</p>
+                        <p class="tarif">20€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>PLATS</h2>
                 <div class="blocmenu blocmenu--plat">
                 <article class="menu">
-                    <h4>Filet de boeuf aux herbes</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Accompagné de sa ribambelle de légumes</p>
-                    <p class="tarif">40€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Filet de boeuf aux herbes</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Accompagné de sa ribambelle de légumes</p>
+                        <p class="tarif">40€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Parmentier de queue de boeuf</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">A la truffe noire sur sa purée de panais</p>
-                    <p class="tarif">35€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Parmentier de queue de boeuf</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">A la truffe noire sur sa purée de panais</p>
+                        <p class="tarif">35€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Filet de turbo</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Aux agrumes</p>
-                    <p class="tarif">44€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Filet de Turbot</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Aux agrumes</p>
+                        <p class="tarif">44€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="blocmenu blocmenu--dessert">
                 <article class="menu">
-                    <h4>Paris-Brest</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Revisité</p>
-                    <p class="tarif">18€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Paris-Brest</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Revisité</p>
+                        <p class="tarif">18€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Macaron au chocolat d'exception</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Et glace à la vanille de Madagascar</p>
-                    <p class="tarif">22€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Macaron au chocolat d'exception</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Et glace à la vanille de Madagascar</p>
+                        <p class="tarif">22€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 <article class="menu">
-                    <h4>Mousse au chocolat</h4>
-                    <div class="descriptiontarif">
-                    <p class="description_menu">Au piment d'espelette et à la truffe noire</p>
-                    <p class="tarif">23€</p>
-                    <div class="valide"><i class="fas fa-check-circle"></i></div></div>
+                    <div class="totaldescription">
+                        <h4>Mousse au chocolat</h4>
+                        <div class="descriptiontarif">
+                        <p class="description_menu">Au piment d'espelette et à la truffe noire</p>
+                        <p class="tarif">23€</p></div></div>
+                    <div class="valide"><i class="fas fa-check-circle"></i></div>
                 </article>
                 </div>
             </section>
